force-app/main/default/objects/SMS_History__c/SMS_History__c.object-meta.xml
<CustomObject>
    <description>This Object stores information about Outgoing SMS.</description>
    <label>SMS History</label>
    <nameField>
        <displayFormat>SMS-{0000000}</displayFormat>
        <label>SMS History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>