force-app/main/default/objects/SMS_History__c/fields/Account_Sid__c.field-meta.xml
<CustomField>
    <fullName>Account_Sid__c</fullName>
    <description>Account SID</description>
    <inlineHelpText>Account SID</inlineHelpText>
    <label>Account Sid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>