force-app/main/default/objects/SMS_History__c/fields/body__c.field-meta.xml
<CustomField>
    <fullName>body__c</fullName>
    <description>It store the SMS body</description>
    <inlineHelpText>It store the SMS body</inlineHelpText>
    <label>Body</label>
    <type>TextArea</type>
</CustomField>