force-app/main/default/objects/SMS_History__c/fields/Date_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Created__c</fullName>
    <description>This field contains the SMS Created On date.</description>
    <inlineHelpText>This field contains the SMS Created On date.</inlineHelpText>
    <label>Date Created</label>
    <length>255</length>
    <type>Text</type>
</CustomField>