force-app/main/default/objects/SMS_History__c/fields/Date_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent__c</fullName>
    <description>This field contains the SMS Sent On date.</description>
    <inlineHelpText>This field contains the SMS Sent On date.</inlineHelpText>
    <label>Date Sent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>