force-app/main/default/objects/SMS_History__c/fields/Date_Updated__c.field-meta.xml
<CustomField>
    <fullName>Date_Updated__c</fullName>
    <description>This field contains the latest SMS Status Updated On date.</description>
    <inlineHelpText>This field contains the latest SMS Status Updated On date.</inlineHelpText>
    <label>Date Updated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>