force-app/main/default/objects/SMS_History__c/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <description>This field contains the ERROR Code, if status is UNDELIVERED</description>
    <label>Error Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>