force-app/main/default/objects/SMS_History__c/fields/from__c.field-meta.xml
<CustomField>
    <fullName>from__c</fullName>
    <description>This field contains the Sender&apos;s phone number.</description>
    <inlineHelpText>This field contains the Sender&apos;s phone number.</inlineHelpText>
    <label>From</label>
    <length>15</length>
    <type>Text</type>
</CustomField>