force-app/main/default/objects/SMS_History__c/fields/SID__c.field-meta.xml
<CustomField>
    <fullName>SID__c</fullName>
    <description>It contains the SMS Record SID</description>
    <inlineHelpText>It contains the SMS Record SID</inlineHelpText>
    <label>SID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>