force-app/main/default/objects/SMS_History__c/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <description>This field contains the status of the message. The status can be Sent, Submitted, Queued, etc.</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>