force-app/main/default/objects/SMS_History__c/fields/To__c.field-meta.xml
<CustomField>
    <fullName>To__c</fullName>
    <description>This field contains the mobile number of the recipient.</description>
    <label>To</label>
    <length>15</length>
    <type>Text</type>
</CustomField>