force-app/main/default/objects/SMS_History__c/fields/URI__c.field-meta.xml
<CustomField>
    <fullName>URI__c</fullName>
    <description>A URI aims to identify a resource and differentiate it from other resources</description>
    <inlineHelpText>A URI aims to identify a resource and differentiate it from other resources</inlineHelpText>
    <label>URI</label>
    <type>TextArea</type>
</CustomField>